vm/src/snapshots/vm__test__stack_snapshot_tests@loops__continue.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/loops/continue.tapir
---
[
  FrameResult(
    active_states: 0,
    int_prop: 16,
  ),
]
