vm/src/snapshots/vm__test__stack_snapshot_tests@loops__division_by_subtraction.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/loops/division_by_subtraction.tapir
---
[
  ([], PropObj(
    int_prop: 20,
  )),
]
